--- a/Contato/Sobre.html
+++ b/Contato/Sobre.html
@@ -11,8 +11,8 @@
         <h1>Entre em Contato com a Academia Spartans</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="aulas.html">Aulas</a></li>
+                <li><a href="../Página inicial/index.html">Início</a></li>
+                <li><a href="../Aulas/aulas.html">Aulas</a></li>
             </ul>
         </nav>
     </header>
