--- a/Página inicial/index.html
+++ b/Página inicial/index.html
@@ -9,13 +9,11 @@
 </head>
 <body>
     <section id="popup">
-        <img src="../images/Your paragraph text.png">
-        <h2>Venha se tornar um guerreiro</h2>
         <button id="closebtn">Fechar</button>
     </section>
     <header>
         <section class="logu">
-        <img src="../images/logospartans.png" class="logu">
+        <img src="../images/SPARTANPNG.png" class="logu">
         </section>
         <!--(A ser inserido) <section class="barralateral">
             <input type="checkbox" id="checkbox">
@@ -63,7 +61,7 @@
   </div>
 
     <footer id="rodape">
-        <img src="../images/spartansname.png" class="a">
+        <img src="../images/spartansnamepng.png" class="a">
         <section id="contato" class="b">
             <p>Para mais informações, entre em contato conosco:</p>
             <address>
