--- a/Login/login.html
+++ b/Login/login.html
@@ -16,5 +16,5 @@
                 <input type="submit" value="Entrar">
             </form>
             <a href="login2.html">Ainda não tem uma conta? Registre-se</a>
-            <a href="index.html">Já tem uma conta? Voltar à página inicial</a>
+            <a href="../Página inicial/index.html">Já tem uma conta? Voltar à página inicial</a>
         </div>
