--- a/Aulas/aulas.html
+++ b/Aulas/aulas.html
@@ -9,13 +9,13 @@
 <body>
     <header>
         <section class="logu">
-            <img src="../images/logospartans.png" class="logu">
+            <img src="../images/SPARTANPNG.png" class="logu">
             </section>  
             <nav>
                 <ul>
-                    <li><a href="../Página inicial/index.html">Home</a></li>
-                    <li><a href="../contato/Sobre.html">FAQ</a></li>
-                    <li><a href="../Login/login.html">Minha Conta</a></li>
+                    <li><a href="../Página inicial/index.html"><button class="btn">Home</button></a></li>
+                    <li><a href="../contato/Sobre.html"><button class="btn">FAQ</button></a></li>
+                    <li><a href="../Login/login.html"><button class="btn">Login</button></a></li>
                 </ul>
             </nav>
         </div>
@@ -39,13 +39,20 @@
             </div>
         </section>
     </main>
-
-    <footer>
-        <div class="container">
+    
+        <footer id="rodape">
+            <img src="../images/spartansnamepng.png" class="a">
+            <section id="contato" class="b">
+                <p>Para mais informações, entre em contato conosco:</p>
+                <address>
+                    <p>Contato: spartans@gmail.com</p>
+                    <p>Telefone: (13) 99614-2292</p>                
+                </address>
+            </section>
+        <div class="i">
             <p>&copy; 2024 Academia Spartans. Todos os direitos reservados.</p>
         </div>
-    </footer>
-
+        </footer>
     <script src="aulas.js"></script>
 </body>
 </html>
