--- a/Página inicial/index.html
+++ b/Página inicial/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academia Spartans</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="index.css">
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="index.js"></script>
 </head>
 <body>
@@ -56,10 +58,16 @@
     <div class="container">
       <section id="planos" class="section">
           <h2>Venha treinar conosco!</h2>
-          <p>Confira nossos planos abaixo.</p>
+          <p>Confira nossa localização abaixo.</p>
       </section>
+      <section id="map" class="map">
+        <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+        <script src="index.js"></script>
+        </section>
+        <p>Av. do Trab., 1408 - Vila Antartica, Praia Grande - SP, 11723-000</p>
   </div>
 
+  
     <footer id="rodape">
         <img src="../images/spartansnamepng.png" class="a">
         <section id="contato" class="b">
