--- a/Página inicial/index.html
+++ b/Página inicial/index.html
@@ -7,45 +7,38 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="index.css">
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
 </head>
 <body>
-    <section id="popup">
+    <section id="popup" style="display:none;">
         <button id="closebtn">Fechar</button>
     </section>
+    
     <header>
         <section class="logu">
-        <img src="../images/SPARTANPNG.png" class="logu">
+            <img src="../images/SPARTANPNG.png" class="logu" alt="Logo da Academia Spartans">
         </section>
-        <!--(A ser inserido) <section class="barralateral">
-            <input type="checkbox" id="checkbox">
-            <label for="checkbox" class="toggle">
-                <div class="barras" id="barra1"></div>
-                <div class="barras" id="barra2"></div>
-                <div class="barras" id="barra3"></div>
-            </label>-->
-            <nav>
-                <ul>
-                    <li><a href="../Login/login.html"><button class="btn">Login</button></a></li>
-                    <li><a href="../Aulas/aulas.html"><button class="btn">Aulas</button></a></li>
-                    <li><a href="../Contato/Sobre.html"><button class="btn">FAQ</button></a></li>
-                </ul>
-            </nav>    
-        </section>
+        <nav>
+            <ul>
+                <li><a href="../Login/login.html"><button class="btn">Login</button></a></li>
+                <li><a href="../Aulas/aulas.html"><button class="btn">Aulas</button></a></li>
+                <li><a href="../Contato/Sobre.html"><button class="btn">FAQ</button></a></li>
+            </ul>
+        </nav>    
     </header>
     
     <section class="hero">
-        <h2 class="bmvd">Bem-vindo à
-        <span>Academia Spartans!</span></h2>
-        <p>Transforme seu corpo e sua mente com nossos mais variados treinos .</p>
+        <h2 class="bmvd">Bem-vindo à <span>Academia Spartans!</span></h2>
+        <p>Transforme seu corpo e sua mente com nossos mais variados treinos.</p>
     </section>
 
     <div class="container">
-      <section id="sobre" class="section">
-          <h2>Quem somos?</h2>
-          <p>Na Academia Spartans, oferecemos uma ampla gama de atividades para atender às suas necessidades de fitness. <br>Desde musculação até aulas de yoga, estamos aqui para ajudar você a alcançar seus objetivos de saúde e bem-estar.</p>
-      </section>
-  </div>
+        <section id="sobre" class="section">
+            <h2>Quem somos?</h2>
+            <p>Na Academia Spartans, oferecemos uma ampla gama de atividades para atender às suas necessidades de fitness. Desde musculação até aulas de yoga, estamos aqui para ajudar você a alcançar seus objetivos de saúde e bem-estar.</p>
+        </section>
+    </div>
+
     <div class="carousel">
         <div class="carousel-inner">
             <div class="carousel-item"><img src="../images/82c33f06f7e104562771e343d22f0642.png" alt="Musculação"><p>Musculação para todos os objetivos</p></div>
@@ -56,20 +49,16 @@
     </div>
 
     <div class="container">
-      <section id="planos" class="section">
-          <h2>Venha treinar conosco!</h2>
-          <p>Confira nossa localização abaixo.</p>
-      </section>
-      <section id="map" class="map">
-        <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-        <script src="index.js"></script>
+        <section id="planos" class="section">
+            <h2>Venha treinar conosco!</h2>
+            <p>Confira nossa localização abaixo.</p>
         </section>
+        <section id="map" class="map" style="height: 300px;"></section>
         <p>Av. do Trab., 1408 - Vila Antartica, Praia Grande - SP, 11723-000</p>
-  </div>
+    </div>
 
-  
     <footer id="rodape">
-        <img src="../images/spartansnamepng.png" class="a">
+        <img src="../images/spartansname.png" class="a" alt="Nome da Academia Spartans">
         <section id="contato" class="b">
             <p>Para mais informações, entre em contato conosco:</p>
             <address>
@@ -77,9 +66,9 @@
                 <p>Telefone: (13) 99614-2292</p>                
             </address>
         </section>
-    <div class="i">
-        <p>&copy; 2024 Academia Spartans. Todos os direitos reservados.</p>
-    </div>
+        <div class="i">
+            <p>&copy; 2024 Academia Spartans. Todos os direitos reservados.</p>
+        </div>
     </footer>
 </body>
 </html>
