--- a/Aulas/aulas.html
+++ b/Aulas/aulas.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul>
                     <li><a href="../Página inicial/index.html"><button class="btn">Home</button></a></li>
-                    <li><a href="../contato/Sobre.html"><button class="btn">FAQ</button></a></li>
+                    <li><a href="../Contato/contact.html"><button class="btn">FAQ</button></a></li>
                     <li><a href="../Login/login.html"><button class="btn">Login</button></a></li>
                 </ul>
             </nav>
